# UAV_Rail_inspection

./: .gitignore  README.md  dataAug.py  get_frames.py  go_script.sh
insp_rail_pkg/: CMakeLists.txt  package.xml
insp_rail_pkg/launch/: view_uav_image.launch
insp_rail_pkg/scripts/: Lyapunov_drone_controller.py  PID_drone_controller.py  UDP_server.py  cmd.JSON  cmd_vel_publisher.py  command_publisher.py  control_errors  detectron2_ros.py  drone_controller.py  drone_controller_simulation.py  frames2video.py  img_listener_UDP.py  line_detection.py  odometry_lyap.py  pc_drone_controller.py  real_control_errors  real_errors.py
my_custom_interfaces_pkg/: CMakeLists.txt  package.xml
my_custom_interfaces_pkg/msg/: Drone_cmd.msg
